--- a/angela/angela/Base.lproj/Main.storyboard
+++ b/angela/angela/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -156,6 +156,7 @@
                             </mask>
                         </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="gWE-eD-Jsn"/>
                     <connections>
                         <outlet property="ajudaTextfield" destination="rTf-aF-zDl" id="F03-hu-65l"/>
                         <outlet property="criarButton" destination="3xd-Wc-cMW" id="Btq-zj-H48"/>
@@ -168,7 +169,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="570" y="313"/>
+            <point key="canvasLocation" x="561" y="305"/>
         </scene>
         <!--Novo EventoVC-->
         <scene sceneID="WGv-jK-cNK">
@@ -226,7 +227,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ppz-mA-E58" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1369.5" y="313"/>
+            <point key="canvasLocation" x="1318.5" y="297"/>
         </scene>
         <!--LoginVC-->
         <scene sceneID="9e9-na-9HV">
